Vectorised LU solver